# DPGMM

./: CMakeLists.txt  Makefile  README.md  calc.c  data4.txt  dpgmm.c  dpgmm.h  dpgmm.pc.in  dpgmm.py  example.c  example2.c  example4.c  gaussian_prior.c  gsl.c  student_t.c  test.py  test4.py
